--- a/index.html
+++ b/index.html
@@ -218,14 +218,14 @@ li a{
     text-align: center;
     line-height: 38px;
     border-radius: 50%;
-    background: #111;
+    background: white;
     color:rgb(73, 25, 25);
     border: 1px solid rgb(73, 25, 25);
     transition: 0.3s;
 }
 
 .footer-social a:hover {
-    background:rgb(73, 25, 25);
+    background: white;
     color: #000;
     transform: translateY(-5px);
 }
